--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!--<style>
+        body{
+            background-image: url('images/Psych3.jpg');
+        }
+    </style>
+-->
     <nav>
         <div class="logo">
             <h1>Alec Avery</h1>
@@ -26,7 +33,17 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <img src="https://i.pinimg.com/474x/08/fc/8f/08fc8f28df56feaae8c44e9299bc7e60--baby-bats-adorable-animals.jpg" alt="baby bat">
+
+    <div class="row">
+        <div class="column_one" style="color: chartreuse;">
+            <h1>Hello.</h1>
+        </div>
+        <div class="column_two" style="color: aqua;">
+            <h1>Hello...</h1>
+        </div>
+    </div>
+
+    <a href=""></a>
     <script src="nav.js"></script>
 </body>
 </html>
