--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
-<body>
-
-    <!--<style>
-        body{
-            background-image: url('images/Psych3.jpg');
-        }
-    </style>
--->
-    
+<body class=body>    
     <nav>
         <div class="logo">
             <h1>Alec Avery</h1>
@@ -35,14 +27,7 @@
         </div>
     </nav>
 
-    <div class="row">
-        <div class="column_one" style="color: chartreuse;">
-            <h1>Hello.</h1>
-        </div>
-        <div class="column_two" style="color: aqua;">
-            <h1>Hello...</h1>
-        </div>
-    </div>
+    <div class="header-img"></div>
 
     <a href=""></a>
     <script src="nav.js"></script>
