--- a/About.html
+++ b/About.html
@@ -6,6 +6,7 @@
     <title>Alec Avery - About Me</title>
     <link rel="stylesheet" href="Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://user-images.githubusercontent.com/67405069/86561215-277b1500-bf2e-11ea-9624-e3d901932fde.png">
 </head>
 <body class=body>    
     <nav>
@@ -14,10 +15,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html" class="hover">Home</a></li>
+            <li><a href="About.html" class="hover">About</a></li>
+            <li><a href="#" class="hover">Projects</a></li>
+            <li><a href="#" class="hover">Contact</a></li>
         </ul>
 
         <div class="burger">
