Added noselect on text

--- a/About.html
+++ b/About.html
@@ -11,14 +11,14 @@
 <body class=body>    
     <nav>
         <div class="logo">
-            <h1>Alec Avery</h1>
+            <h1 class="noselect">Alec Avery</h1>
         </div>
 
         <ul class="nav-links">
-            <li><a href="index.html" class="hover">Home</a></li>
-            <li><a href="About.html" class="hover">About</a></li>
-            <li><a href="#" class="hover">Projects</a></li>
-            <li><a href="#" class="hover">Contact</a></li>
+            <li class="noselect"><a href="index.html" class="hover">Home</a></li>
+            <li class="noselect"><a href="About.html" class="hover">About</a></li>
+            <li class="noselect"><a href="#" class="hover">Projects</a></li>
+            <li class="noselect"><a href="#" class="hover">Contact</a></li>
         </ul>
 
         <div class="burger">
