--- a/Contact.html
+++ b/Contact.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alec Avery - About Me</title>
+    <title>Alec Avery</title>
     <link rel="stylesheet" href="Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="icon" href="https://user-images.githubusercontent.com/67405069/86561215-277b1500-bf2e-11ea-9624-e3d901932fde.png">
-    
-    <style>
-
-
-    </style>
 </head>
-<body class=aboutbody>    
+<body class=contactbody>    
     <nav>
         <div class="logo">
             <h1 class="noselect">Alec Avery</h1>
@@ -33,13 +28,7 @@
         </div>
     </nav>
 
-    <!--<div class="about-img"></div>-->
-    <div class=aboutimages>
-        <img src="https://user-images.githubusercontent.com/67405069/86560222-cd795000-bf2b-11ea-9ec8-27507a401450.jpg" class="aboutimageone" alt="Stripes">
-        <img src="https://user-images.githubusercontent.com/67405069/86707854-5e146680-bfe6-11ea-8533-4a9d33ccd739.jpg" class="aboutimagetwo" alt="Butterfly">
-    </div>
-
+    <a href=""></a>
     <script src="nav.js"></script>
 </body>
 </html>
-    
