--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="icon" href="https://user-images.githubusercontent.com/67405069/86561215-277b1500-bf2e-11ea-9624-e3d901932fde.png">
 </head>
-<body class=body>    
-    <nav>
-        <div class="logo">
-            <h1 class="noselect">Alec Avery</h1>
-        </div>
+<body class=homebody> 
+    
+        <nav>
+            <div class="logo">
+                <h1 class="noselect">Alec Avery</h1>
+            </div>
+            <ul class="nav-links">
+                <li class="noselect"><a href="index.html" class="hover">Home</a></li>
+                <li class="noselect"><a href="About.html" class="hover">About</a></li>
+                <li class="noselect"><a href="#" class="hover">Projects</a></li>
+                <li class="noselect"><a href="Contact.html" class="hover">Contact</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
 
-        <ul class="nav-links">
-            <li class="noselect"><a href="index.html" class="hover">Home</a></li>
-            <li class="noselect"><a href="About.html" class="hover">About</a></li>
-            <li class="noselect"><a href="#" class="hover">Projects</a></li>
-            <li class="noselect"><a href="#" class="hover">Contact</a></li>
-        </ul>
+    <div class="Showcase"></div>
 
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </nav>
-
-    <div class="header-img"></div>
-
-    <a href=""></a>
     <script src="nav.js"></script>
 </body>
 </html>
