--- a/About.html
+++ b/About.html
@@ -9,7 +9,9 @@
     <link rel="icon" href="https://user-images.githubusercontent.com/67405069/86561215-277b1500-bf2e-11ea-9624-e3d901932fde.png">
     
     <style>
-
+        body{
+            background-color: #CAF0F8;
+        }
 
     </style>
 </head>
@@ -34,9 +36,17 @@
     </nav>
 
     <!--<div class="about-img"></div>-->
-    <div class=aboutimages>
-        <img src="https://user-images.githubusercontent.com/67405069/86560222-cd795000-bf2b-11ea-9ec8-27507a401450.jpg" class="aboutimageone" alt="Stripes">
+    <div class="aboutimages">
         <img src="https://user-images.githubusercontent.com/67405069/86707854-5e146680-bfe6-11ea-8533-4a9d33ccd739.jpg" class="aboutimagetwo" alt="Butterfly">
+        <img src="https://user-images.githubusercontent.com/67405069/86560222-cd795000-bf2b-11ea-9ec8-27507a401450.jpg" class="aboutimageone" alt="Stripes">
+    </div>
+
+    <br>
+
+    <div class="aboutme">
+        <p>
+            I am a 22 year old who wants to learn more about prgramming. I hope you like my site!
+        </p>
     </div>
 
     <script src="nav.js"></script>
