--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 
     <div class="Showcase"></div>
 
+    <div class ="Grid">
+        <div class="box1">
+            Hello
+        </div>
+        <div class="box2">
+            Hello
+        </div>
+    </div>
+
     <script src="nav.js"></script>
 </body>
 </html>
