--- a/index.html
+++ b/index.html
@@ -7,31 +7,34 @@
     <link rel="stylesheet" href="Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="icon" href="https://user-images.githubusercontent.com/67405069/86561215-277b1500-bf2e-11ea-9624-e3d901932fde.png">
+    <style>
+        body{
+            height: 100vh;
+        }
+    </style>
+
 </head>
-<body class=homebody> 
-    
-        <nav>
-            <div class="logo">
-                <h1 class="noselect">Alec Avery</h1>
-            </div>
-            <ul class="nav-links">
-                <li class="noselect"><a href="index.html" class="hover">Home</a></li>
-                <li class="noselect"><a href="About.html" class="hover">About</a></li>
-                <li class="noselect"><a href="#" class="hover">Projects</a></li>
-                <li class="noselect"><a href="Contact.html" class="hover">Contact</a></li>
-            </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        </nav>
-
-    <div class="Showcase"></div>
-
-    <div class ="Grid">
+<body class="homebody"> 
+        <img src="https://user-images.githubusercontent.com/67405069/86557633-c13dc480-bf24-11ea-9d22-14a65261880f.jpg"> 
+            <nav>
+                <div class="logo">
+                    <h1 class="noselect">Alec Avery</h1>
+                </div>
+                <ul class="nav-links">
+                    <li class="noselect"><a href="index.html" class="hover">Home</a></li>
+                    <li class="noselect"><a href="About.html" class="hover">About</a></li>
+                    <li class="noselect"><a href="#" class="hover">Projects</a></li>
+                    <li class="noselect"><a href="Contact.html" class="hover">Contact</a></li>
+                </ul>
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+    <div class ="showcase">
         <div class="box1">
-            Hello
+            <div class="box1_1"></div>
         </div>
         <div class="box2">
             Hello
