--- a/About.html
+++ b/About.html
@@ -8,14 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="icon" href="https://user-images.githubusercontent.com/67405069/86561215-277b1500-bf2e-11ea-9624-e3d901932fde.png">
     
-    <style>
-        body{
-            background-color: #CAF0F8;
-        }
+    <style></style>
 
-    </style>
 </head>
-<body class=aboutbody>    
+<body class=aboutbody>   
+    <img src="https://images.unsplash.com/photo-1579546929518-9e396f3cc809?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60">
     <nav>
         <div class="logo">
             <h1 class="noselect">Alec Avery</h1>
@@ -34,19 +31,14 @@
             <div class="line3"></div>
         </div>
     </nav>
-
-    <!--<div class="about-img"></div>-->
-    <div class="aboutimages">
-        <img src="https://user-images.githubusercontent.com/67405069/86707854-5e146680-bfe6-11ea-8533-4a9d33ccd739.jpg" class="aboutimagetwo" alt="Butterfly">
-        <img src="https://user-images.githubusercontent.com/67405069/86560222-cd795000-bf2b-11ea-9ec8-27507a401450.jpg" class="aboutimageone" alt="Stripes">
+    <div class="imagecon">
+        <div class="aboutimageone"></div>
+        <div class="aboutimagetwo"></div>
     </div>
 
-    <br>
-
-    <div class="aboutme">
-        <p>
-            I am a 22 year old who wants to learn more about prgramming. I hope you like my site!
-        </p>
+    <div class="aboutgrid">
+        <div class="aboutboxone"></div>
+        <div class="aboutboxtwo"></div>
     </div>
 
     <script src="nav.js"></script>
